--- a/Style.css
+++ b/Style.css
@@ -1,31 +1,37 @@
-  #main-navbar ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-	overflow: hidden;
-  }
+  h1 {
+	color: black
+  }	  
 
-  #main-navbar ul li {
-    float: center;
-	margin:  0 15px;
-
-  }
-
-  #main-navbar ul li a {
-    display: block
+  nav#main-navbar {
 	background-color: red;
-	color: #fff;
-	font-weight: bold;
-	text-decoration: none;
-	text-align: center;
-	width: 100px;
-	padding: 10px 0px 8px 0px;
-	border-radius: 4px;
+  }
+
+  nav#main-navbar {
+	  text-align: center;
   }
   
-  #main-navbar ul li a:hover {
-    background-color: #800
-	color:  yellow;
-	background-color: 20px
-	}
-	
+  nav#main-navbar {
+	  overflow: hidden;
+  }
+  
+  nav#main-navbar {
+	  list-style-type: none;
+	  margin: 0;
+	  padding: 0;
+	  display: in-line block;
+	  vertical-align: top;
+  }
+  
+  nav#main-navbar ul li {
+	  float: center;
+  }
+  
+  nav#main-navbar ul li a {
+	  display: in-line block;
+	  padding: 10px 20px;
+	  color: #fff;
+	  text-decoration: none;
+  }
+  nav#main-navbar float {
+  }
+  #
