--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
   h1 {
-	color: black
+	color: red
   }	  
 
   nav#main-navbar {
@@ -34,4 +34,10 @@
   }
   nav#main-navbar float {
   }
-  #
+
+  #border {
+	  background-color: #888888;
+	  padding: 20px;
+	  border: 10px solid red;
+	 
+  }
