--- a/Style.css
+++ b/Style.css
@@ -54,3 +54,77 @@
 	  border: 10px solid red;
 	 
   }
+  
+  #mycontainer {
+    background-color: #888888;
+  }
+  
+  .name {
+	  color: black;
+	  font-weight: bold;
+	  font-size: 2em;
+	  position: relative;
+	  top: -4px;
+  }
+  
+  #main-para {
+	  background-color: gray;
+	  width: 59%;
+	  height: 600px;
+	  padding: 20px;
+	  margin: 10px;
+	  float: right;
+	  border: 10px solid red;
+	  position: relative;
+  }
+  
+  #officers {
+	  float: right;
+  }
+  
+  #shirtcontainer {
+	  background-color: #000000;
+  }
+  
+  .headers {
+	  color: red;
+	  font-weight: bold;
+	  font-size: 2em;
+	  position: relative;
+  }
+  
+  #shirtmain {
+	  background-color: gray;
+	  width: 500px;
+	  height: 300px;
+	  padding: 20px;
+	  margin: 10px;
+	  float: left;
+	  border: 10px solid red;
+	  position: relative;
+  }
+  
+  .para {
+	  color: black;
+	  font-weight: bold;
+	  font-size: 1.2em;
+	  position: relative;
+	  top: -1em;
+  }
+  
+  #video {
+	  float: right;
+	  top: -10em;
+	  padding: 20px;
+	  margin: 10px:
+	  
+  }
+  .para2 {
+	  color: red;
+	  font-weight: bold;
+	  font-size: 1.2em;
+	  position: relative;
+	  bottom: 4em;
+  }
+  
+	  
