--- a/Style.css
+++ b/Style.css
@@ -55,14 +55,14 @@
 	 
   }
   
-  .content {
-	  h3, h4 
-		  font-family: 'Oxygen', cursive;
+  #border.content h2, h3 {
+ 		  font-family: 'Oxygen', cursive;
 		  font-weight: 400;
-		  
-	  p, ul 
+  }
+  
+  #border.content p, ul{
 		  font-family: 'Sen', serif;
-		    }
+  }
   
   #mycontainer {
     background-color: #888888;
