--- a/Style.css
+++ b/Style.css
@@ -55,14 +55,11 @@
 	 
   }
   
-  #border.content h2, h3 {
+  #border.content h2, h3, p, ul {
  		  font-family: 'Oxygen', cursive;
 		  font-weight: 400;
   }
   
-  #border.content p, ul{
-		  font-family: 'Sen', serif;
-  }
   
   #mycontainer {
     background-color: #888888;
