--- a/css/Style.css
+++ b/css/Style.css
@@ -93,6 +93,23 @@
   
   #officers {
 	  float: right;
+	  
+  }
+
+  #charity {
+	  float: left;
+	  margin: 10px;
+	  padding: 20px;
+	  border: 10px solid red;
+	  positon: relative;
+  }
+  
+  #school {
+	  float: left;
+	  margin: 10px;
+	  padding: 20px;
+	  border: 10px solid red;
+	  positon: relative;
   }
   
   #shirtcontainer {
