--- a/css/Style.css
+++ b/css/Style.css
@@ -1,6 +1,7 @@
   h1 {
 	color: red;
 	text-align: center;
+	text-decoration: underline;
   }	  
 
   #main-navbar {
@@ -101,7 +102,7 @@
 	  margin: 10px;
 	  padding: 20px;
 	  border: 10px solid red;
-	  positon: relative;
+	  
   }
   
   #school {
@@ -109,7 +110,7 @@
 	  margin: 10px;
 	  padding: 20px;
 	  border: 10px solid red;
-	  positon: relative;
+	  
   }
   
   #shirtcontainer {
@@ -132,6 +133,12 @@
 	  float: left;
 	  border: 10px solid red;
 	  position: relative;
+  }
+  
+  #title {
+	  margin: 10px;
+	  padding: 20px;
+	  text-align: center;
   }
   
   .para {
