--- a/css/Style.css
+++ b/css/Style.css
@@ -113,7 +113,7 @@
 	  
   }
   
-  #shirtcontainer {
+   #shirtcontainer {
 	  background-color: #000000;
   }
   
@@ -162,6 +162,11 @@
 	  font-size: 1.2em;
 	  position: relative;
 	  bottom: 4em;
+  }
+  
+  .img {
+	  margin: 10px;
+	  padding: 20px;
   }
   
 	  
